# proxy-switcher

./: Cargo.toml  README.md
src/: app.rs  local_proxy.rs  main.rs  models.rs  storage.rs  system_proxy.rs  tester.rs  tun_proxy.rs
src/ui/: detail.rs  mod.rs  proxy_list.rs  sidebar.rs
