[package]
name = "proxy-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync"] }
reqwest = { version = "0.11", features = ["socks", "json"] }
tokio-socks = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tun-rs = { version = "2", features = ["async"] }
etherparse = "0.16"
smoltcp = { version = "0.11", default-features = false, features = ["medium-ip", "proto-ipv4", "socket-tcp", "std"] }
log = "0.4"
env_logger = "0.11"
